# expressionTemplatesCppCon2019

./: CMakeLists.txt  README.md
include/: expressionTemplates.hpp  tridiagonal.hpp
tests/: CMakeLists.txt  standardExample.cpp  tests.cpp
